# AIvsAI

./: AGENTS.md  Cargo.toml  INSTALL.md  README.md  install.sh  setup
Install AIvsAI.app/Contents/: Info.plist
Install AIvsAI.app/Contents/MacOS/: Install AIvsAI
conversations/: 2026-03-01_02-29-11_1_1.md
src/: main.rs
安装 AIvsAI.app/Contents/: Info.plist
安装 AIvsAI.app/Contents/MacOS/: 安装 AIvsAI
